--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 body {
     background-color: rgb(0, 0, 0);
+    margin: auto;
+    padding: auto;
 }
-
+/* add padding 0 to take away padding space on sides */
 .container {
     background-color: rgb(255, 255, 255);
     margin: auto;
-    height: 845px;
-    width: 1000px;
+    height: 100%;
+    width: 100%;
     margin-bottom: 0;
+    padding: 0;
 }
 
 header {
@@ -19,6 +22,8 @@ h1 {
     color: rgb(255, 255, 255);
     text-align: center;
     padding-top: 100px;
+    margin-left: 0;
+    margin-right: 0%;
 }
 
 h3 {
