--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ h3 {
     letter-spacing: 2px;
     padding-left: 100px;
     padding-right: 100px;
-    margin-top: -130px;
+    margin-top: -70px;
 }
 
 p {
@@ -49,6 +49,7 @@ p {
     float: left;
     text-align: right;
     margin-top: -3px;
+    margin-bottom: 80px;
 }
 
 footer {
